# BeamApp

./: .gitignore  .npmrc  .pnp.cjs.backup  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  GAP_ANALYSIS.md  GEMINI.md  IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_RELEASE_CHECKLIST.md  README.md  SECURITY_AUDIT.md  SETUP.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills.md  test-escrow-setup.ts
docs/: CRITICAL_ERRORS_ANALYSIS.md  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  SECURE_STORAGE_SPEC.md
mobile/beam-app/: .env.example  .eslintignore  .eslintrc.js  .gitignore  .npmrc  ATTESTATION_QUICK_REFERENCE.md  BLE_ENHANCEMENT_SUMMARY.txt  BLE_FILES_INDEX.md  CONFIGURATION_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  ENVIRONMENT_CONFIGURATION.md  ENV_CONFIGURATION_SUMMARY.md  ENV_SETUP.md  MANUAL_INSTRUCTION_BUILDING.md  PLAY_INTEGRITY_IMPLEMENTATION.md  RPC_PROVIDER_GUIDE.md  SOLANA_CONFIGURATION_README.md  app.json  index.js  metro.config.js  package.json  react-native.config.js  test-app.js  tsconfig.json
program/: Anchor.toml  package.json
program/programs/program/: Cargo.toml
program/programs/program/src/: attestation.rs  lib.rs  state.rs
scripts/: check-escrow-real.ts  create-test-usdc.ts  create-usdc-mint.ts  fund-wallet.ts  mint-usdc.ts  send-sol.ts  start-dev.sh  test-escrow-balance-direct.ts  test-real-deser.ts  transfer-sol.ts  usdc-mint-authority.json  usdc-mint-config.json
verifier/: .env.example  .env.production  .env.template  .gitignore  AUTH_SETUP.md  package.json  tsconfig.json
(+179 files in other folders)
