[package]
name = "beam"
version = "0.1.0"
description = "Beam - Offline-first P2P payments with escrow on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "beam"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
ed25519-dalek = { version = "1", default-features = false, features = ["alloc", "u64_backend"] }
sha2 = { version = "0.10", default-features = false }
